@@ -5,6 +5,7 @@
 	* src/code/extlib/rope.ml:
 	    - prevent [starts_with] and [ends_with] from failing
 	    - prevent [trim] from failing when all characters are whitespaces
+	    - more efficient [of_ustring]
 
 2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
